<resources>
    <string name="app_name">Project01</string>

    <string name="next">Next</string>

    <string name="name">Name</string>
    <string name="d_o_b">Date of Birth</string>
    <string name="NID_number">NID Number</string>
    <string name="blood_group">Blood Group</string>
    <string name="university">University</string>
    <string name="department">Department</string>
    <string name="student_id">Student ID</string>
    <string name="study_level">Study Level</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>

    <string name="sign_up">Sign Up</string>
    <string name="text_header">Successful!</string>

    <string name="username">Name:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="nid_number">NID Number:</string>
    <string name="b_group">Blood Group:</string>
    <string name="university_option">University:</string>
    <string name="department_option">Department:</string>
    <string name="student_id_option">Student ID:</string>
    <string name="study_level_option">Study Level:</string>
    <string name="email_address_option">Email Address:</string>
    <string name="phone_number_option">Phone Number:</string>

</resources>